--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="">
   <meta name="keywords" content="NeRF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bringing NeRFs to the Latent Space: Inverse Graphics Autoencoder</title>
+  <title>IG-AE</title>
 
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
@@ -34,7 +34,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Nerfies: Deformable Neural Radiance Fields</h1>
+          <h1 class="title is-1 publication-title">Bringing NeRFs to the Latent Space: Inverse Graphics Autoencoder</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="">Antoine Schnepf</a><sup>* 1,3</sup>,</span>
