--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Bringing NeRFs to the Latent Space: Inverse Graphics Autoencoder</h1>
+          <h1 class="title is-1 publication-title">Bringing NeRFs to the Latent Space: <br> Inverse Graphics Autoencoder</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="">Antoine Schnepf</a><sup>* 1,3</sup>,</span>
