--- a/index.html
+++ b/index.html
@@ -37,26 +37,26 @@
           <h1 class="title is-1 publication-title">Bringing NeRFs to the Latent Space: <br> Inverse Graphics Autoencoder</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="">Antoine Schnepf</a><sup>* 1,3</sup>,</span>
+              <a href="https://scholar.google.fr/citations?user=CcjdVBgAAAAJ&hl=fr">Antoine Schnepf</a><sup>* 1,3</sup>,</span>
             <span class="author-block">
-              <a href="">Karim Kassab</a><sup>* 1,2</sup>,</span>
+              <a href="https://scholar.google.com/citations?user=0dObvuYAAAAJ&hl=fr">Karim Kassab</a><sup>* 1,2</sup>,</span>
             <span class="author-block">
-              <a href="">Jean-Yves Franceschi</a><sup>1</sup>,
+              <a href="https://scholar.google.fr/citations?user=IL2OzksAAAAJ&hl=fr">Jean-Yves Franceschi</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="">Laurent Caraffa</a><sup>2</sup>,
+              <a href="https://scholar.google.com/citations?user=N0YTGr8AAAAJ&hl=en">Laurent Caraffa</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="">Flavian Vasile</a><sup>1</sup>,
+              <a href="https://scholar.google.fr/citations?user=L7qb6ToAAAAJ&hl=en">Flavian Vasile</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="">Jeremie Mary</a><sup>1</sup>,
+              <a href="https://scholar.google.fr/citations?user=T3dQRjAAAAAJ&hl=fr">Jeremie Mary</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="">Andrew Comport</a><sup>3</sup>
+              <a href="https://scholar.google.com/citations?user=8UW2vacAAAAJ&hl=en">Andrew Comport</a><sup>3</sup>
             </span>
             <span class="author-block">
-              <a href="">Valérie Gouet-Brunet</a><sup>2</sup>
+              <a href="https://scholar.google.fr/citations?user=mqq6zX4AAAAJ&hl=en">Valérie Gouet-Brunet</a><sup>2</sup>
             </span>
           </div>
 
