--- a/index.html
+++ b/index.html
@@ -151,15 +151,42 @@
   </div>
 </section>
 
+<!-- Method. -->
+<div class="columns is-centered">
+  <div class="column is-full-width">
+    <h2 class="title is-3">Method</h2>
+
+    <!-- Latent NeRF Training Pipeline. -->
+    <h3 class="title is-4">Latent NeRF Training Pipeline</h3>
+    <div class="content has-text-justified">
+      <p>
+        some text should go here
+      </p>
+    </div>
+    <br/>
+    <!--/ Latent NeRF Training Pipeline. -->
+
+    <!-- IG-AE Training -->
+    <h3 class="title is-4">IG-AE Training</h3>
+    <div class="content has-text-justified">
+      <p>
+        some text should go here
+      </p>
+    </div>
+    <!--/ IG-AE Training -->
+  </div>
+</div>
+<!--/ Mehtod -->
+
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{ig-ae,
-  author    = {},
-  title     = {Bringing NeRFs to the Latent Space: Inverse Graphics Autoencoder},
-  journal   = {},
-  year      = {2024},
-}</code></pre>
+      author    = {},
+      title     = {{Bringing NeRFs to the Latent Space: Inverse Graphics Autoencoder}},
+      journal   = {},
+      year      = {2024},
+    }</code></pre>
   </div>
 </section>
 
