--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 </section>
 
 <!-- Method. -->
+<section class="section">
 <div class="columns is-centered">
   <div class="column is-full-width">
     <h2 class="title is-3">Method</h2>
@@ -177,6 +178,7 @@
   </div>
 </div>
 <!--/ Mehtod -->
+</section>
 
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
