--- a/index.html
+++ b/index.html
@@ -153,33 +153,36 @@
 
 <!-- Method. -->
 <section class="section">
-<div class="columns is-centered">
-  <div class="column is-full-width">
-    <h2 class="title is-3">Method</h2>
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Method</h2>
 
-    <!-- Latent NeRF Training Pipeline. -->
-    <h3 class="title is-4">Latent NeRF Training Pipeline</h3>
-    <div class="content has-text-justified">
-      <p>
-        some text should go here
-      </p>
-    </div>
-    <br/>
-    <!--/ Latent NeRF Training Pipeline. -->
+        <!-- Latent NeRF Training Pipeline. -->
+        <h3 class="title is-4">Latent NeRF Training Pipeline</h3>
+        <div class="content has-text-justified">
+          <p>
+            some text should go here
+          </p>
+        </div>
+        <br/>
+        <!--/ Latent NeRF Training Pipeline. -->
 
-    <!-- IG-AE Training -->
-    <h3 class="title is-4">IG-AE Training</h3>
-    <div class="content has-text-justified">
-      <p>
-        some text should go here
-      </p>
+        <!-- IG-AE Training -->
+        <h3 class="title is-4">IG-AE Training</h3>
+        <div class="content has-text-justified">
+          <p>
+            some text should go here
+          </p>
+        </div>
+        <!--/ IG-AE Training -->
+      </div>
     </div>
-    <!--/ IG-AE Training -->
   </div>
-</div>
-<!--/ Mehtod -->
 </section>
+<!--/ Mehtod -->
 
+<!-- BibTex -->
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
@@ -191,6 +194,7 @@
     }</code></pre>
   </div>
 </section>
+<!--/ BibTex -->
 
 
 
