--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>IG-AE</title>
 
-
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
 
@@ -20,13 +19,7 @@
         href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="./static/css/index.css">
   <!-- <link rel="icon" href="./static/images/favicon.svg"> -->
-
   <script defer src="./static/js/fontawesome.all.min.js"></script>
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script defer src="./static/js/fontawesome.all.min.js"></script>
-  <script src="./static/js/bulma-carousel.min.js"></script>
-  <script src="./static/js/bulma-slider.min.js"></script>
-  <script src="./static/js/index.js"></script> -->
 </head>
 
 <body>
@@ -162,6 +155,7 @@
         <!-- Latent NeRF Training Pipeline. -->
         <h3 class="title is-4">Latent NeRF Training Pipeline</h3>
         <div class="content has-text-justified">
+          <img src="static/images/latent-nerf-training.svg" alt="Latent NeRF Training"/>
           <p>
             some text should go here
           </p>
