--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
               <a href="https://scholar.google.fr/citations?user=IL2OzksAAAAJ&hl=fr">Jean-Yves Franceschi</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=N0YTGr8AAAAJ&hl=en">Laurent Caraffa</a><sup>2</sup>,<br>
+              <a href="https://scholar.google.com/citations?user=N0YTGr8AAAAJ&hl=en">Laurent Caraffa</a><sup>2</sup>,
             </span>
+            <br>
             <span class="author-block">
               <a href="https://scholar.google.fr/citations?user=L7qb6ToAAAAJ&hl=en">Flavian Vasile</a><sup>1</sup>,
             </span>
@@ -155,7 +156,7 @@
         <!-- Latent NeRF Training Pipeline. -->
         <h3 class="title is-4">Latent NeRF Training Pipeline</h3>
         <div class="content has-text-justified">
-          <img src="static/images/latent-nerf-training.svg" alt="Latent NeRF Training"/>
+          <img src="static/images/latent-nerf-training.svg" alt="Latent NeRF Training" width="60%"/>
           <p>
             some text should go here
           </p>
