--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
         <!-- Latent NeRF Training Pipeline. -->
         <h3 class="title is-4">Latent NeRF Training Pipeline</h3>
         <div class="content has-text-justified">
-          <img src="static/images/latent-nerf-training.svg" alt="Latent NeRF Training" width="60%"/>
+          <div class="columns is-centered has-text-centered">
+            <img src="static/images/latent-nerf-training.svg" alt="Latent NeRF Training" width="60%"/>
+          </div>
           <p>
             some text should go here
           </p>
