--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>*</sup>equal contributions</span><br>
-            <span class="author-block"><sup>1</sup>Criteo AI Lab, Paris, France</span><br>
-            <span class="author-block"><sup>2</sup>LASTIG, Université Gustave Eiffel, IGN-ENSG, F-94160 Saint-Mandé</span><br>
-            <span class="author-block"><sup>3</sup>Université Côte d’Azur, CNRS, I3S, France</span>
+            <span class="author-block"><sup>* </sup>equal contributions</span><br>
+            <span class="author-block"><sup>1 </sup>Criteo AI Lab, Paris, France</span><br>
+            <span class="author-block"><sup>2 </sup>LASTIG, Université Gustave Eiffel, IGN-ENSG, F-94160 Saint-Mandé</span><br>
+            <span class="author-block"><sup>3 </sup>Université Côte d’Azur, CNRS, I3S, France</span>
           </div>
 
           <div class="column has-text-centered">
@@ -160,7 +160,8 @@
             <img src="static/images/latent-nerf-training.svg" alt="Latent NeRF Training" width="75%"/>
           </div>
           <p>
-            some text should go here
+            \\( \mathcal{L} \\)
+            $\mathcal{L}$
           </p>
         </div>
         <br/>
@@ -196,8 +197,6 @@
   </div>
 </section>
 <!--/ BibTex -->
-
-
 
 
 <!-- <footer class="footer">
