--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{ig-ae,
-      author    = {},
+      author    = {.},
       title     = {{Bringing NeRFs to the Latent Space: Inverse Graphics Autoencoder}},
       journal   = {},
       year      = {2024},
