--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@
             <img src="static/images/latent-nerf-training.svg" alt="Latent NeRF Training" width="75%"/>
           </div>
           <p>
-            \\( \mathcal{L} \\)
-            $\mathcal{L}$
+            \(\mathcal{L}_{a}\)
             With <a href="http://docs.mathjax.org/en/latest/basic/mathematics.html">\(\LaTeX\) input</a>:
             When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
             $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
