--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                 <a href="https://arxiv.org"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
+                      <i class="fa-solid fa-file-lines"></i>
                   </span>
-                  <span>Paper</span>
+                  <span>Paper (coming soon)</span>
                 </a>
               </span>
               <!-- <span class="link-block">
