--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <a href="https://arxiv.org"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                      <i class="fa-solid fa-file-lines"></i>
+                      <i class="fas fa-file-pdf"></i>
                   </span>
                   <span>Paper (coming soon)</span>
                 </a>
