--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <a href="https://scholar.google.fr/citations?user=T3dQRjAAAAAJ&hl=fr">Jeremie Mary</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=8UW2vacAAAAJ&hl=en">Andrew Comport</a><sup>3</sup>
+              <a href="https://scholar.google.com/citations?user=8UW2vacAAAAJ&hl=en">Andrew Comport</a><sup>3</sup>,
             </span>
             <span class="author-block">
               <a href="https://scholar.google.fr/citations?user=mqq6zX4AAAAJ&hl=en">Valérie Gouet-Brunet</a><sup>2</sup>
