--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       <div class="column is-8">
         <div class="content">
           <p>
-            This website was built on top of the <a href="https://github.com/nerfies/nerfies.github.io">following template</a>.
+            This website was built on top of the <a href="https://github.com/nerfies/nerfies.github.io">following template</a>, for which we thank the authors.
           </p>
         </div>
       </div>
