--- a/index.html
+++ b/index.html
@@ -125,6 +125,17 @@
 </section>
 
 <!-- ### -->
+<div class="container is-max-desktop">
+  <div class="columns is-centered">
+    <div class="column is-full-width">
+      <video id="large-scale" autoplay muted loop playsinline height="60%">
+        <source src="./static/videos/front_cover.mp4"
+                type="video/mp4">
+      </video>
+    </div>
+  </div>
+</div>
+</section>
 
 <section class="section">
   <div class="container is-max-desktop">
@@ -206,7 +217,7 @@
 </section>
 <!--/ BibTex -->
 
-
+<!-- Thanks -->
 <footer class="footer">
   <div class="container">
     <div class="columns is-centered">
@@ -220,6 +231,7 @@
     </div>
   </div>
 </footer>
+<!--/ Thanks -->
 
 </body>
 </html>
