--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <div class="container is-max-desktop">
   <div class="columns is-centered">
     <div class="column is-full-width">
-      <video id="large-scale" autoplay muted loop playsinline height="60%">
+      <video id="large-scale" autoplay muted loop playsinline width="60%">
         <source src="./static/videos/front_cover.mp4"
                 type="video/mp4">
       </video>
