--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>* </sup>equal contributions</span><br>
+            <span class="author-block"><sup>* </sup>equal contribution</span><br>
             <span class="author-block"><sup>1 </sup>Criteo AI Lab, Paris, France</span><br>
             <span class="author-block"><sup>2 </sup>LASTIG, Université Gustave Eiffel, IGN-ENSG, F-94160 Saint-Mandé</span><br>
             <span class="author-block"><sup>3 </sup>Université Côte d’Azur, CNRS, I3S, France</span>
@@ -127,7 +127,7 @@
 <!-- ### -->
 <div class="container is-max-desktop">
   <div class="columns is-centered">
-      <video id="large-scale" autoplay muted loop playsinline width="70%">
+      <video id="large-scale" autoplay muted loop playsinline width="65%">
         <source src="./static/videos/front_cover.mp4"
                 type="video/mp4">
       </video>
