--- a/index.html
+++ b/index.html
@@ -201,6 +201,57 @@
 </section>
 <!--/ Mehtod -->
 
+<!-- Results. -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Comparison with training NeRFs in a standard latent space</h2>
+        This section compares NeRFs trained in a standard latent space of an AE, and in our IG-AE 3D-aware latent space, using our latent NeRF training pipeline.
+        <!-- Shapenet Bag -->
+        <h3 class="title is-4">Shapenet Bag</h3>
+        <div class="content has-text-justified">
+          <div class="columns is-centered has-text-centered">
+            <video id="large-scale" autoplay muted loop playsinline width="70%">
+              <source src="./static/videos/Bags.mp4"
+                      type="video/mp4">
+            </video>   
+          </div>
+        </div>
+        <br/>
+        <!--/ Shapenet Bag -->
+
+        <!-- Shapenet Hat -->
+        <h3 class="title is-4">Shapenet Bag</h3>
+        <div class="content has-text-justified">
+          <div class="columns is-centered has-text-centered">
+            <video id="large-scale" autoplay muted loop playsinline width="70%">
+              <source src="./static/videos/Hats.mp4"
+                      type="video/mp4">
+            </video>   
+          </div>
+        </div>
+        <br/>
+        <!--/ Shapenet Hat -->
+
+        <!-- Shapenet Vase -->
+        <h3 class="title is-4">Shapenet Bag</h3>
+        <div class="content has-text-justified">
+          <div class="columns is-centered has-text-centered">
+            <video id="large-scale" autoplay muted loop playsinline width="70%">
+              <source src="./static/videos/Vases.mp4"
+                      type="video/mp4">
+            </video>   
+          </div>
+        </div>
+        <br/>
+        <!--/ Shapenet Vase -->
+      </div>
+    </div>
+  </div>
+</section>
+<!--/ Results -->
+
 <!-- BibTex -->
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
