--- a/index.html
+++ b/index.html
@@ -207,12 +207,12 @@
     <div class="columns is-centered">
       <div class="column is-full-width">
         <h2 class="title is-3">Comparison with training NeRFs in a standard latent space</h2>
-        This section compares NeRFs trained in a standard latent space of an AE, and in our IG-AE 3D-aware latent space, using our latent NeRF training pipeline.
+        This section compares NeRFs trained in a standard latent space of an AE, and in our IG-AE 3D-aware latent space, using our latent NeRF training pipeline.<br><br>
         <!-- Shapenet Bag -->
         <h3 class="title is-4">Shapenet Bag</h3>
         <div class="content has-text-justified">
           <div class="columns is-centered has-text-centered">
-            <video id="large-scale" autoplay muted loop playsinline width="70%">
+            <video id="large-scale" autoplay muted loop playsinline width="60%">
               <source src="./static/videos/Bags.mp4"
                       type="video/mp4">
             </video>   
@@ -222,10 +222,10 @@
         <!--/ Shapenet Bag -->
 
         <!-- Shapenet Hat -->
-        <h3 class="title is-4">Shapenet Bag</h3>
+        <h3 class="title is-4">Shapenet Hat</h3>
         <div class="content has-text-justified">
           <div class="columns is-centered has-text-centered">
-            <video id="large-scale" autoplay muted loop playsinline width="70%">
+            <video id="large-scale" autoplay muted loop playsinline width="60%">
               <source src="./static/videos/Hats.mp4"
                       type="video/mp4">
             </video>   
@@ -235,10 +235,10 @@
         <!--/ Shapenet Hat -->
 
         <!-- Shapenet Vase -->
-        <h3 class="title is-4">Shapenet Bag</h3>
+        <h3 class="title is-4">Shapenet Vase</h3>
         <div class="content has-text-justified">
           <div class="columns is-centered has-text-centered">
-            <video id="large-scale" autoplay muted loop playsinline width="70%">
+            <video id="large-scale" autoplay muted loop playsinline width="60%">
               <source src="./static/videos/Vases.mp4"
                       type="video/mp4">
             </video>   
