--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Comparison with training NeRFs in a standard latent space</h2>
-        This section compares NeRFs trained in a standard latent space of an AE, and in our IG-AE 3D-aware latent space, using our latent NeRF training pipeline.<br><br>
+        <h2 class="title is-3">Comparison with NeRFs trained in a standard latent space</h2>
+        This section compares NeRFs trained in a standard latent space of an AE, and in our IG-AE 3D-aware latent space, using our latent NeRF training pipeline implemented as an extension to Nerfstudio.<br><br>
         <!-- Shapenet Bag -->
         <h3 class="title is-4">Shapenet Bag</h3>
         <div class="content has-text-justified">
