--- a/index.html
+++ b/index.html
@@ -189,9 +189,14 @@
           </div>
           <p>
             <b>IG-AE Training.</b>
-            We jointly learn a set of latent synthetic scenes \(\mathcal{T}_\tau\) and supervise the latent images \(z_{s,p}\) of an autoencoder with rendered 3D-consistent latents \(\tilde{z}_{s,p}\) using \(\mathcal{L}_\mathrm{latent}\).
-            We match decoded latent renderings \(\tilde{x}_{s,p}\) with the ground truth scene renderings \(x_{s,p}\) using \(\mathcal{L}_\mathrm{RGB}\).
-            We preserve autoencoder performances on synthetic and real data respectively through \(\mathcal{L}_\mathrm{ae}^\mathrm{(synth)}\) and \(\mathcal{L}_\mathrm{ae}^\mathrm{(real)}\).
+            We train IG-AE by applying a 3D regularization on its 2D latent space.
+            Specifically, we train the encoder \(E_\phi\) and decoder \(D_\psi\) to preserve 3D consistency by supervising them with 3D-consistent latent images.
+            We obtain such 3D consistent latent images \(\tilde{z}_{s,p}\) from a set of Triplanes \(\{T_1, ..., T_N\}\) that are simultaneously learnt.
+            Each Tri-Plane \(T_i\) learns the latent scene corresponding to the ground truth RGB scene \(M_i\).
+            This optimization is done via two reconstructive objectives. 
+            In the latent space,  \(\mathcal{L}_\mathrm{latent}\) aligns the Tri-Plane renderings \(\tilde{z}_{s,p}\) with the encoded ground truth view \(z_{s,p}\), updating both the latent Tri-Planes and the encoder.
+            In the RGB space, \(\mathcal{L}_\mathrm{RGB}\) aligns the ground truth view \(x_{s,p}\) with decoded rendering \(\tilde{x}_{s,p}\), updating both the latent Tri-Planes and the decoder. 
+            In addition, we preserve the auto-encoding performance of our IG-AE by adopting a reconstructive loss on synthetic and real data, via \(\mathcal{L}_\mathrm{ae}^\mathrm{(synth)}\) and \(\mathcal{L}_\mathrm{ae}^\mathrm{(real)}\) respectively.
           </p>
         </div>
         <!--/ IG-AE Training -->
