--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <div class="column is-full-width">
         <h2 class="title is-3">Method</h2>
         We propose a Latent NeRF Training Pipeline compatible with most NeRF architectures and auto-encoders (AEs).
-        Subsequently, we identify classical AEs as limiting factors in latent NeRF quality, and propose IG-AE to improve it.
+        Subsequently, we identify classical AEs as limiting factors in latent NeRF quality, and propose IG-AE to improve it.<br><br>
         <!-- Latent NeRF Training Pipeline. -->
         <h3 class="title is-4">Latent NeRF Training Pipeline</h3>
         <div class="content has-text-justified">
