--- a/index.html
+++ b/index.html
@@ -127,11 +127,13 @@
 <!-- ### -->
 <div class="container is-max-desktop">
   <div class="columns is-centered">
+    <div class="column is-full-width">
       <video id="large-scale" autoplay muted loop playsinline width="65%">
         <source src="./static/videos/front_cover.mp4"
                 type="video/mp4">
       </video>
     </div>
+  </div>
 </div>
 </section>
 
@@ -205,7 +207,7 @@
     </div>
   </div>
 </section>
-<!--/ Mehtod -->
+<!--/ Method -->
 
 <!-- Results. -->
 <section class="section">
