--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </section>
 
 <!-- ### -->
-<div class="container is-max-desktop">
+<!-- <div class="container is-max-desktop">
   <div class="column is-full-width">
     <div class="columns is-centered">
       <video id="large-scale" autoplay muted loop playsinline width="65%">
@@ -135,14 +135,29 @@
     </div>
   </div>
 </div>
-</section>
+</section> -->
+
+<div class="container is-max-desktop">
+  <div class="columns is-centered">
+    <div class="column is-full-width">
+      <div class="content has-text-justified">
+        <div class="columns is-centered has-text-centered">
+          <video id="large-scale" autoplay muted loop playsinline width="65%">
+            <source src="./static/videos/front_cover.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 <section class="section">
   <div class="container is-max-desktop">
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Abstract</h2>
+        <h2 class="title is-3">Abstracts</h2>
         <div class="content has-text-justified">
           While pre-trained image autoencoders are increasingly utilized in computer vision, the application of inverse graphics in 2D latent spaces has been under-explored. 
           Yet, besides reducing the training and rendering complexity, applying inverse graphics in the latent space enables a valuable interoperability with other latent-based 2D methods. 
