--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <span class="author-block">
               <a href="https://scholar.google.com/citations?user=0dObvuYAAAAJ&hl=fr">Karim Kassab</a><sup>* 1,2</sup>,</span>
             <span class="author-block">
-              <a href="https://scholar.google.fr/citations?user=IL2OzksAAAAJ&hl=fr">Jean-Yves Franceschi</a><sup>1</sup>,
+              <a href="https://jyfranceschi.fr/">Jean-Yves Franceschi</a><sup>1</sup>,
             </span>
             <span class="author-block">
               <a href="https://scholar.google.com/citations?user=N0YTGr8AAAAJ&hl=en">Laurent Caraffa</a><sup>2</sup>,
