--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code (coming next week)</span>
+                  <span>Code (coming this week)</span>
                   </a>
               </span>
               <!-- Dataset Link. -->
