--- a/index.html
+++ b/index.html
@@ -279,12 +279,14 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{ig-ae,
-      title     = {{Bringing NeRFs to the Latent Space: Inverse Graphics Autoencoder}},
-      author    = {},
-      journal   = {},
-      year      = {2024}
-    }</code></pre>
+    <pre><code>
+      @article{ig-ae,
+        title={{Bringing NeRFs to the Latent Space: Inverse Graphics Autoencoder}}, 
+        author={Antoine Schnepf and Karim Kassab and Jean-Yves Franceschi and Laurent Caraffa and Flavian Vasile and Jeremie Mary and Andrew Comport and Valérie Gouet-Brunet},
+        journal={arXiv preprint arXiv:2410.22936},
+        year={2024}
+      }
+    </code></pre>
   </div>
 </section>
 <!--/ BibTex -->
