--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <!-- PDF Link. -->
               <span class="link-block">
                 <a href="https://arxiv.org/abs/2410.22936"
-                   class="external-link button is-normal is-rounded is-dark">
+                   class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
@@ -99,7 +99,7 @@
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/k-kassab/igae"
-                   class="external-link button is-normal is-rounded is-dark">
+                   class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
@@ -109,7 +109,7 @@
               <!-- Dataset Link. -->
               <span class="link-block">
                 <a href=""
-                   class="external-link button is-normal is-rounded is-dark">
+                   class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
                   <span class="icon">
                       <i class="far fa-images"></i>
                   </span>
