--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <!-- Dataset Link. -->
               <span class="link-block">
                 <a href=""
-                   class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
+                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
                   </span>
