--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
                   <span>Code</span>
                   </a>
               </span>
+              <span class="link-block">
+                <a href="https://github.com/AntoineSchnepf/latent-nerfstudio"
+                   class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
+                  <span class="icon">
+                      <i class="fab fa-github"></i>
+                  </span>
+                  <span>Latent Nerfstudio</span>
+                  </a>
+              </span>
               <!-- Dataset Link. -->
               <span class="link-block">
                 <a href=""
