--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
           <div class="column is-full-width">
               <h2 class="title is-3">Latent NeRFs</h2>
               Visualization of Latent NeRFs trained on Objaverse using the Vanilla-NeRF architecture, our Latent NeRF Training Pipeline, and IG-AE.
+              <br><br>
               <div class="content has-text-justified">
                 <div class="columns is-centered has-text-centered">
                     <video id="large-scale" autoplay muted loop playsinline width="90%">
@@ -301,10 +302,9 @@
         <br/>
         <!--/ Shapenet Hat -->
         <!-- Shapenet Hat zoomed -->
-        <h3 class="title is-4">Shapenet Hat</h3>
         <div class="content has-text-justified">
           <div class="columns is-centered has-text-centered">
-            <video id="large-scale" autoplay muted loop playsinline width="70%">
+            <video id="large-scale" autoplay muted loop playsinline width="100%">
               <source src="./static/videos/supplementary_videos/hats_zoomed.mp4"
                       type="video/mp4">
             </video>   
@@ -325,18 +325,17 @@
         </div>
         <br/>
         <!--/ Shapenet Vase -->
-        <!-- Shapenet Hat zoomed -->
-        <h3 class="title is-4">Shapenet Hat</h3>
+        <!-- Shapenet vase zoomed -->
         <div class="content has-text-justified">
           <div class="columns is-centered has-text-centered">
-            <video id="large-scale" autoplay muted loop playsinline width="70%">
+            <video id="large-scale" autoplay muted loop playsinline width="100%">
               <source src="./static/videos/supplementary_videos/vases_zoomed.mp4"
                       type="video/mp4">
             </video>   
           </div>
         </div>
         <br/>
-        <!--/ Shapenet Hat zoomed -->
+        <!--/ Shapenet vase zoomed -->
       </div>
     </div>
   </div>
