--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">Bringing NeRFs to the Latent Space: <br> Inverse Graphics Autoencoder</h1>
+          <h1 style="font-size:1.5rem">ICLR 2025</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://scholar.google.fr/citations?user=CcjdVBgAAAAJ&hl=fr" target="_blank" rel="noopener noreferrer">Antoine Schnepf</a><sup>* 1,3</sup>,</span>
