--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">Bringing NeRFs to the Latent Space: <br> Inverse Graphics Autoencoder</h1>
           <h1 style="font-size:1.8rem">ICLR 2025</h1>
-          <h1 style="font-size:1.8rem"></h1>
+          <h1 style="font-size:1.8rem">   </h1><br>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://scholar.google.fr/citations?user=CcjdVBgAAAAJ&hl=fr" target="_blank" rel="noopener noreferrer">Antoine Schnepf</a><sup>* 1,3</sup>,</span>
