--- a/index.html
+++ b/index.html
@@ -71,34 +71,23 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
+                <a href="https://openreview.net/forum?id=LTDtjrv02Y"
+                   class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
+                  <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                  </span>
+                  <span>OpenReview</span>
+                </a>
+              </span>
+              <span class="link-block">
                 <a href="https://arxiv.org/abs/2410.22936"
                    class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Paper</span>
-                </a>
-              </span>
-              <!-- <span class="link-block">
-                <a href="https://arxiv.org/"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="ai ai-arxiv"></i>
-                  </span>
                   <span>arXiv</span>
                 </a>
-              </span> -->
-              <!-- Video Link. -->
-              <!-- <span class="link-block">
-                <a href="https://www.youtube.com"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-youtube"></i>
-                  </span>
-                  <span>Video</span>
-                </a>
-              </span> -->
-              <!-- Code Link. -->
+              </span>
               <span class="link-block">
                 <a href="https://github.com/k-kassab/igae"
                    class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
@@ -119,12 +108,12 @@
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://huggingface.co/datasets/k-kassab/igae-data/tree/main"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
                   </span>
-                  <span>Data (coming soon)</span>
+                  <span>Data</span>
                   </a>
             </div>
 
