--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
     <pre><code>
       @inproceedings{
         ig-ae,
-        title={Bringing Ne{RF}s to the Latent Space: Inverse Graphics Autoencoder},
+        title={{Bringing NeRFs to the Latent Space: Inverse Graphics Autoencoder}},
         author={Antoine Schnepf and Karim Kassab and Jean-Yves Franceschi and Laurent Caraffa and Flavian Vasile and Jeremie Mary and Andrew I. Comport and Valerie Gouet-Brunet},
         booktitle={The Thirteenth International Conference on Learning Representations},
         year={2025},
