--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <a href="https://scholar.google.fr/citations?user=T3dQRjAAAAAJ&hl=fr" target="_blank" rel="noopener noreferrer">Jeremie Mary</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=8UW2vacAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Andrew Comport</a><sup>\(\dagger\) 3</sup>,
+              <a href="https://scholar.google.com/citations?user=8UW2vacAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Andrew Comport</a><sup>\(^\dagger\) 3</sup>,
             </span>
             <span class="author-block">
               <a href="https://scholar.google.fr/citations?user=mqq6zX4AAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Valérie Gouet-Brunet</a><sup>\(^\dagger\) 2</sup>
@@ -61,10 +61,10 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>* \(\dagger\)</sup>equal contribution</span><br>
+            <span class="author-block"><sup>* \(^\dagger\)</sup>equal contribution</span><br>
             <span class="author-block"><sup>1 </sup>Criteo AI Lab, Paris, France</span><br>
             <span class="author-block"><sup>2 </sup>LASTIG, Université Gustave Eiffel, IGN-ENSG, F-94160 Saint-Mandé</span><br>
-            <span class="author-block"><sup>3 </sup>Université Côte d’Azur, CNRS, I3S, France</span>
+            <span class="author-block"><sup>3 </sup>Université Côte d'Azur, CNRS, I3S, France</span>
           </div>
 
           <div class="column has-text-centered">
