added link to poster

--- a/index.html
+++ b/index.html
@@ -89,6 +89,16 @@
                 </a>
               </span>
               <span class="link-block">
+                <a href="https://iclr.cc/media/PosterPDFs/ICLR%202025/29995.png?t=1744878387.3421676"
+                   class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
+                  <span class="icon">
+                      <i class="fas fa-image"></i>
+                  </span>
+                  <span>Poster</span>
+                </a>
+              </span>
+              <br>
+              <span class="link-block">
                 <a href="https://github.com/k-kassab/igae"
                    class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
                   <span class="icon">
